--- a/webmap/app/overview/overview.html
+++ b/webmap/app/overview/overview.html
@@ -1,10 +1,22 @@
 <div ng-app="OverviewCtrl">
 	<p>{{test}}</p>
-    <img class="map" src="images/map.png" width="740" height="600" usemap="#urls">
+    <img class="map" src="images/map.png" width="1233" height="992" usemap="#urls">
     <map name="urls">
-        <area shape="rect" coords="0,0,1000,150" href="javascript:alert('爸爸是个大帅哥！！！');" title="area 1">
-        <area shape="rect" coords="0,150,1000,300" href="javascript:alert('XXXXXX');" title="area 2">
+<!--         <area shape="rect" coords="375,280,435,340" href="javascript:alert('xxxx！！！');" title="城内">
+        <area shape="poly" coords="360,300,380,300,400,300,360,200,380,200,400,240" href="javascript:alert('XXXXXX');" title="area 2">
         <area shape="rect" coords="0,300,1000,450" href="javascript:alert('Navigate to 3');" title="area 3">
-        <area shape="rect" coords="0,450,1000,600" href="javascript:alert('Navigate to 4');" title="area 4">
+        <area shape="poly" coords="0,450,0,600,100,100" href="javascript:alert('Navigate to 4');" title="area 4"> -->
+	    <area target="" alt="" title="城内" href="areaClick($event)" coords="642,461,750,560" shape="rect">
+	    <area target="" alt="" title="城北" href="" coords="617,336,781,459" shape="rect">
+	    <area target="" alt="" title="经济开发区" href="" coords="610,167,785,332" shape="rect">
+	    <area target="" alt="" title="城东" href="" coords="755,465,791,459,791,392,903,390,905,435,1013,415,1013,448,1000,478,951,570,774,593,755,561" shape="poly">
+	    <area target="" alt="" title="城南" href="" coords="616,562,750,563,780,612,781,662,782,725,721,736,613,735,543,731,609,618,609,618" shape="poly">
+	    <area target="" alt="" title="高新" href="" coords="601,616,530,579,527,597,423,595,428,695,415,702,401,710,367,753,364,785,504,785" shape="poly">
+	    <area target="" alt="" title="城西" href="" coords="638,465,611,464,610,425,549,437,538,466,489,465,425,452,418,511,423,589,524,590,527,573,602,612,609,559,635,557" shape="poly">
+	    <area target="" alt="" title="浐灞" href="" coords="793,243,942,271,968,291,992,329,1009,363,1015,410,911,426,908,385,792,386" shape="poly">
+	    <area target="" alt="" title="曲江" href="" coords="777,598,946,575,938,633,912,671,873,693,788,720,787,613" shape="poly">
+	    <area target="" alt="" title="长安" href="" coords="363,789,342,990,1014,994,946,642,916,688,818,721,785,733,756,749,675,749,536,745,506,790" shape="poly">
+	    <area target="" alt="" title="西咸" href="" coords="335,983,363,750,394,704,416,695,407,455,420,430,421,355,415,297,468,276,592,239,595,186,585,135,555,68,541,20,528,3,136,1,186,165,176,307,207,368,90,386,59,412,2,424,2,991" shape="poly">
+	    <area target="" alt="" title="泾渭" href="" coords="743,1,744,100,744,134,733,157,793,139,791,156,1045,138,1036,0" shape="poly">
     </map>
 </div>
